[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ZJlab_LN_PDK"
version = "0.1.0"
description = "ZJlab Lithium Niobate Photonics PDK for layout and tapeout"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Your Name or Lab", email = "you@example.com" }
]
requires-python = ">=3.8"

dependencies = [
    "phidl>=1.6",
    "numpy>=1.20",
    "scipy>=1.6",
]

[project.urls]
homepage = "https://github.com/your-org/ZJlab_LN_PDK"
repository = "https://github.com/your-org/ZJlab_LN_PDK"

[tool.setuptools.packages.find]
where = ["."]
include = ["zjlab_ln*"]
